# book-analyzer-app

./: .gitignore  README.md
backend/: README.md  app.py  pyproject.toml  requirements.txt
backend/src/: app.py
backend/src/backend/: analyzer.py  app.py
backend/tests/: test_analyzer.py
frontend/: .env.development  index.html  package-lock.json  package.json  vercel.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: GraphView.jsx  RankingTable.jsx  ThemeToggle.jsx
frontend/src/hooks/: useTheme.js
frontend/src/lib/: deriveStats.js
